--- a/packages/cli/assets/android/gen/app/src/main/AndroidManifest.xml.hbs
+++ b/packages/cli/assets/android/gen/app/src/main/AndroidManifest.xml.hbs
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <application android:hasCode="true" android:supportsRtl="true" android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name" android:theme="@style/AppTheme">
-        <activity android:configChanges="orientation|keyboardHidden" android:exported="true"
+        <activity android:configChanges="orientation|screenLayout|screenSize|keyboardHidden" android:exported="true"
             android:label="@string/app_name" android:name="dev.dioxus.main.MainActivity">
             <meta-data android:name="android.app.lib_name" android:value="dioxusmain" />
             <meta-data android:name="android.app.func_name" android:value="ANativeActivity_onCreate" />
